Created bill page and bill route
